--------------------------------------------------------------------------------
Fusion 1.209 - January ??. 20003
--------------------------------------------------------------------------------

- 12-31-03: Added Graphics For Monster Skill Meteor (No Damage) [Darkhelmet]
- 12-30-03: Fixed Bug You can no longer regain HP/SP when dead [Darkhelmet]
- 12-30-03: Added Monster Skill Double Strafing [Darkhelmet]
- 12-30-03: Added Monster Skill Brandish Spear [Darkhelmet]
- 12-30-03: Added Monster Skill Heal [Darkhelmet]
- 12-30-03: Added Support For Monster Skills on Attack [Darkhelmet]
- 12-30-03: Added Monster AI Class and Database Loading [Darkhelmet]
- 12-30-03: Added Phen effect to GrandCross so when you get hit you dont cancel spell-[Oatmeal12345]
- 12-30-03: Fixed the Max weight problem from bonus str -[Oatmeal12345]
- 12-30-03: Fixed Grand Cross [Darkhelmet]
- 12-30-03: Fixed Invate join party message were showing on target. [Michen]
- 12-30-03: Fixed Invate join party fail message were showing on target. [Michen]
- 12-29-03: Updated Sanctuary heal time, heal conditions, damage, shape [Colus]
- 12-29-03: Fixed Non-Aggro Tanking Bug. Tanking is now possible. [AlexKreuz]
- 12-29-03: Added Console Command "-save" for saving DBs. [AlexKreuz]
- 12-29-03: Added Console Command "-reload" for reloading DBs. [AlexKreuz]
- 12-28-03: Updated cast time/delay time for Extremity Fist. [Colus]
- 12-28-03: Added client speed update packets for hide/unhide. [Colus]
- 12-28-03: Fixed Tunnel Drive speed modification. [Colus]
- 12-28-03: Fixed ME damage formula. [Colus]
- 12-28-03: Fixed reading of ele_db.txt. [Colus]
- 12-28-03: Added cast times for Increase/Decrease AGI (1 second). [Colus]
- 12-27-03: Fixed code for Tunnel Drive Data. Waiting on Data. [AlexKreuz]
- 12-27-03: Modified Skill_DB Format for correct Skill Requirements. [AlexKreuz]
- 12-27-03: Fixed LockItem / Switch Items on Refine NPC Bug. [AlexKreuz]
- 12-27-03: Fixed DirMove function. [AlexKreuz]