@@ -2,6 +2,8 @@
 Fusion 1.209 - January ??. 20003
 --------------------------------------------------------------------------------
 
+- 01-01-04: Graphical Support for Two Hand Quicken and others (monster skills) [Darkhelmet]
+- 01-01-04: Updated Chance System for Monster Skills [Darkhelmet]
 - 12-31-03: Added Graphics For Monster Skill Meteor (No Damage) [Darkhelmet]
 - 12-30-03: Fixed Bug You can no longer regain HP/SP when dead [Darkhelmet]
 - 12-30-03: Added Monster Skill Double Strafing [Darkhelmet]
